<resources>
    <string name="app_name">Taxi Admin</string>

    <string name="home">Home</string>
    <string name="books">Books</string>
    <string name="publicity">Publicity</string>
    <string name="publicity_add">Add Publicity</string>
    <string name="users">Users</string>
    <string name="taxi">Taxi</string>
    <string name="taxi_search">Search Taxi</string>
    <string name="taxi_add">Add Taxi</string>
    <string name="taxi_profile">Profile Taxi</string>
    <string name="reclamations">Reclamation</string>
    <string name="services">Service</string>
    <string name="service_add">Add Service</string>
    <string name="service_profile">Profile Service</string>
    <string name="profile">Profile</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="settings">Settings</string>
    <string name="notify">Notify</string>
    <string name="login">Login</string>
    <string name="serial">Serial</string>
    <string name="serial_err">Enter the serial</string>

    <string name="category">Category</string>
    <string name="category_err">Enter the category</string>
    <string name="working">Working</string>
    <string name="password">Password</string>
    <string name="password_err">Enter the password</string>
    <string name="username">Username</string>
    <string name="username_err">Enter the username</string>
    <string name="networkunvalid">Network is unavailable!</string>
    <string name="serverunvalid">Server is unavailable!</string>
    <string name="hint_date">yyyy/mm/dd</string>
    <string name="model">Model</string>
    <string name="model_err">Enter the model</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="empty_fields_link">Empty fields !!</string>
    <string name="subject">Subject</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="name_err">Enter the name</string>
    <string name="price">Price</string>
    <string name="price_err">Enter the price</string>
    <string name="renewal">Renewal</string>

    <string-array name="nav_drawer_labels">
        <item>@string/home</item>
        <item>@string/taxi</item>
        <item>@string/publicity</item>
        <item>@string/users</item>
        <item>@string/services</item>
        <item>@string/books</item>
        <item>@string/reclamations</item>
    </string-array>

    <string-array name="place_arrays">
        <item>3</item>
        <item>4</item>
        <item>7</item>
    </string-array>

    <string-array name="luggage_arrays">
        <item>5</item>
        <item>10</item>
        <item>30</item>
        <item>+50</item>
    </string-array>

    <string-array name="period_arrays">
        <item>6 month</item>
        <item>1 year</item>
        <item>5 years</item>
    </string-array>

    <string-array name="value_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
