<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/Mark_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways">

                <Spinner
                    android:id="@+id/Mark_sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>
            </android.support.v7.widget.Toolbar>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/Model_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/Model_etxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/model" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/Serial1_input"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <EditText
                        android:id="@+id/Serial1_etxt"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="text"
                        android:hint="180" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/Serial2_input"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <EditText
                        android:id="@+id/Serial2_etxt"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="text"
                        android:hint="4859" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/input_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways">

                <Spinner
                    android:id="@+id/Place_sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:entries="@array/place_arrays"/>
            </android.support.v7.widget.Toolbar>

            <android.support.v7.widget.Toolbar
                android:id="@+id/input_luggage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways">

                <Spinner
                    android:id="@+id/Luggage_sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:entries="@array/luggage_arrays"/>
            </android.support.v7.widget.Toolbar>

            <TextView
                android:id="@+id/Date_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:gravity="center"
                android:hint="@string/hint_date" />

            <Button
                android:id="@+id/Add_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dip"
                android:text="@string/add"
                android:textAllCaps="false"
                android:background="@color/purpleDeep"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/Empty_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="@string/empty_fields_link"
                android:textAllCaps="false"
                android:textColor="@color/purpleDeep"
                android:textSize="17sp" />
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</ScrollView>